--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/QrCodeComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/QrCodeComponent.razor
@@ -2,7 +2,7 @@
 
 <div class="card h-100">
     <h5 class="card-header d-flex align-items-center">
-        <span>Join session</span>
+        <span>Scan to join session</span>
     </h5>
         
     <div class="card-body d-flex justify-content-center align-items-center">
@@ -12,12 +12,14 @@
              alt="Join QR code" />
     </div>
     
-    <div class="card-footer text-end">
+    <div class="card-footer text-center">
+        <h5>Or join at: @_viewUrl</h5>
     </div>
 </div>   
 
 @code {
     private string? _joinUrl;
+    private string? _viewUrl;
 
     [Parameter] public required string Url { get; set; }
 
@@ -25,6 +27,7 @@
     {
         var uri = new Uri(Url);
         _joinUrl = $"{uri.Scheme}://{uri.Host}";
+        _viewUrl = uri.Host;
     }
 
 }
