Add github source url to about page

--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
@@ -21,6 +21,6 @@ You can find a lot of resources on this topic on the internet. Here are some of 
 
 <h2>Code</h2>
 
-<p>This project is created by <a href="https://github.com/jacobduijzer" target="_blank">Jacob Duijzer</a>, and it will probably be open source in the near future. For now, it is a work in progress. When the status of the project changes, it will be anounced on <a href="http://linkedin.com/in/jacobduijzer" target="_blank">LinkedIn</a>.</p>
+<p>This open source project is created by <a href="https://github.com/jacobduijzer" target="_blank">Jacob Duijzer</a>. You can find the source on <a href="https://github.com/jacobduijzer/DevOpsQuickScan" target="_blank">GitHub</a>.</p>
 
 
