--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
@@ -23,4 +23,21 @@ You can find a lot of resources on this topic on the internet. Here are some of 
 
 <p>This open source project is created by <a href="https://github.com/jacobduijzer" target="_blank">Jacob Duijzer</a>. You can find the source on <a href="https://github.com/jacobduijzer/DevOpsQuickScan" target="_blank">GitHub</a>.</p>
 
+<h2>Contact</h2>
+
+<table class="contact-table">
+    <tr>
+        <td><i class="fas fa-envelope"></i> Email</td>
+        <td><a href="mailto:quickscan@duijzer.com">quickscan@duijzer.com</a></td>
+    </tr>
+    <tr>
+        <td><i class="fab fa-linkedin"></i> LinkedIn</td>
+        <td><a href="https://www.linkedin.com/in/yourusername" target="_blank">linkedin.com/in/jacobduijzer</a></td>
+    </tr>
+    <tr>
+        <td><i class="fab fa-github"></i> GitHub</td>
+        <td><a href="https://github.com/yourusername" target="_blank">github.com/jacobduijzer</a></td>
+    </tr>
+</table>
+
 
