Add contact table

--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
@@ -32,11 +32,11 @@ You can find a lot of resources on this topic on the internet. Here are some of 
     </tr>
     <tr>
         <td><i class="fab fa-linkedin"></i> LinkedIn</td>
-        <td><a href="https://www.linkedin.com/in/yourusername" target="_blank">linkedin.com/in/jacobduijzer</a></td>
+        <td><a href="https://www.linkedin.com/in/jacobduijzer" target="_blank">linkedin.com/in/jacobduijzer</a></td>
     </tr>
     <tr>
         <td><i class="fab fa-github"></i> GitHub</td>
-        <td><a href="https://github.com/yourusername" target="_blank">github.com/jacobduijzer</a></td>
+        <td><a href="https://github.com/jacobduijzer" target="_blank">github.com/jacobduijzer</a></td>
     </tr>
 </table>
 
