--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Dashboard.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Dashboard.razor
@@ -1,4 +1,4 @@
-﻿@page "/dashboard"
+﻿@page "/Dashboard"
 @using DevOpsQuickScan.Core
 @using DevOpsQuickScan.BlazorApp.Components.Partials
 @inject NavigationManager Navigation
