--- a/src/DevOpsQuickScan.BlazorApp/Components/Layout/MainLayout.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Layout/MainLayout.razor
@@ -1,14 +1,34 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager NavManager
 
 <div class="page">
 
     <main>
-        <div class="px-4 d-flex align-items-center justify-content-between" style="background: #fafafa;">
-            <a href="/"><img src="@Assets["/img/logo.jpg"]" height="50" alt="Logo" class="logo" /></a>
-            <a href="/about" class="text-decoration-none" style="color: #888;">
-                <i class="fa-solid fa-circle-info"></i>
-            </a>
-        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <!-- Left items -->
+                <div class="d-flex">
+                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+                        <img src="@Assets["/img/logo.jpg"]"
+                             height="50" alt="Logo"
+                             class="logo"/></NavLink>
+                </div>
+
+                <!-- Right items -->
+                <div class="d-flex ms-auto">
+                    @if (IsOnFacilitatorHub)
+                    {
+                        <a class="nav-link nav-separator" href="/Dashboard" target="_blank">
+                            Participant Dashboard <i class="fa-solid fa-chart-simple"></i>
+                        </a>
+                    }
+
+                    <NavLink class="nav-link" href="/About">About <i class="fa-solid fa-circle-info"></i></NavLink>
+                </div>
+            </div>
+        </nav>
 
         <article class="content px-4">
             @Body
@@ -21,3 +41,10 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+
+@code {
+
+    private bool IsOnFacilitatorHub =>
+        NavManager.Uri.Contains("/FacilitatorHub", StringComparison.InvariantCultureIgnoreCase);
+
+}
