Start with session management

--- a/src/DevOpsQuickScan.BlazorApp/Components/FacilitatorHub/Home.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/FacilitatorHub/Home.razor
@@ -2,6 +2,7 @@
 @using System.Text
 @using DevOpsQuickScan.Core
 @using DevOpsQuickScan.BlazorApp.Components.Partials
+@using DevOpsQuickScan.Domain.Questions
 @inject IJSRuntime Js
 @inject IUserIdService UserId
 @inject SessionService Session
