--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using DevOpsQuickScan.Core
 @using DevOpsQuickScan.BlazorApp.Components.Partials
+@using DevOpsQuickScan.Domain.Questions
 @inject IUserIdService UserId
 @inject SessionService Session
 
