--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/FacilitatorQuestionComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/FacilitatorQuestionComponent.razor
@@ -1,4 +1,5 @@
 @using DevOpsQuickScan.Core
+@using DevOpsQuickScan.Domain.Questions
 
 <div class="card">
     <h5 class="card-header d-flex align-items-center">
